--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food</title>
+    <!--Favicon-->
+    <link rel="shortcut icon" href="./img/tabs/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
@@ -133,15 +135,15 @@
             <div class="offer__slide">
               <img src="img/slider/pepper.jpg" alt="pepper" />
             </div>
-            <!-- <div class="offer__slide">
-                        <img src="img/slider/food-12.jpg" alt="food">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/olive-oil.jpg" alt="oil">
-                    </div>
-                    <div class="offer__slide">
-                        <img src="img/slider/paprika.jpg" alt="paprika">
-                    </div> -->
+            <div class="offer__slide">
+              <img src="img/slider/food-12.jpg" alt="food" />
+            </div>
+            <div class="offer__slide">
+              <img src="img/slider/olive-oil.jpg" alt="oil" />
+            </div>
+            <div class="offer__slide">
+              <img src="img/slider/paprika.jpg" alt="paprika" />
+            </div>
           </div>
         </div>
       </div>
