--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Food</title>
     <!--Favicon-->
-    <link rel="shortcut icon" href="./img/tabs/favicon.ico" />
+    <link rel="shortcut icon" href="./icons/favicon.ico" />
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
