--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
+    <!--Header-->
     <header class="header">
       <div class="header__left-block">
         <div class="header__logo">
@@ -23,6 +24,7 @@
         <button class="btn btn_white">Связаться с нами</button>
       </div>
     </header>
+
     <div class="sidepanel">
       <div class="sidepanel__text"><span>Социальные сети</span></div>
       <div class="sidepanel__divider"></div>
@@ -38,6 +40,7 @@
       <div class="bgc_blue"></div>
       <div class="container">
         <div class="tabcontainer">
+          <!--Tab #1-->
           <div class="tabcontent">
             <img src="img/tabs/vegy.jpg" alt="vegy" />
             <div class="tabcontent__descr">
@@ -47,6 +50,7 @@
               ценой и высоким качеством!
             </div>
           </div>
+          <!--Tab #2-->
           <div class="tabcontent">
             <img src="img/tabs/elite.jpg" alt="elite" />
             <div class="tabcontent__descr">
@@ -55,6 +59,7 @@
               фрукты - ресторанное меню без похода в ресторан!
             </div>
           </div>
+          <!--Tab #3-->
           <div class="tabcontent">
             <img src="img/tabs/post.jpg" alt="post" />
             <div class="tabcontent__descr">
@@ -64,6 +69,7 @@
               Ом!
             </div>
           </div>
+          <!--Tab #4-->
           <div class="tabcontent">
             <img src="img/tabs/vegy.jpg" alt="vegy" />
             <div class="tabcontent__descr">
@@ -72,6 +78,7 @@
               в к/б/ж/у и создаем лучшие блюда для вас.
             </div>
           </div>
+          
           <div class="tabheader">
             <h3>Выберите стиль питания</h3>
             <div class="tabheader__items">
@@ -382,5 +389,7 @@
         </div>
       </div>
     </div>
+
+    <script src="./js/script.js"></script>
   </body>
 </html>
