--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </nav>
       </div>
       <div class="header__right-block">
-        <button class="btn btn_white">Связаться с нами</button>
+        <button data-modal class="btn btn_white">Связаться с нами</button>
       </div>
     </header>
 
@@ -109,7 +109,7 @@
           </div>
         </div>
         <div class="offer__action">
-          <button class="btn btn_dark">Связаться с нами</button>
+          <button data-modal class="btn btn_dark">Связаться с нами</button>
         </div>
       </div>
       <div class="container">
@@ -366,7 +366,7 @@
       <div class="modal__dialog">
         <div class="modal__content">
           <form action="#">
-            <div class="modal__close">&times;</div>
+            <div data-close class="modal__close">&times;</div>
             <div class="modal__title">
               Мы свяжемся с вами как можно быстрее!
             </div>
