--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Food</title>
     <!--Favicon-->
     <link rel="shortcut icon" href="./icons/favicon.ico" />
+    <!--Styles-->
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
