--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
               в к/б/ж/у и создаем лучшие блюда для вас.
             </div>
           </div>
-          
+
           <div class="tabheader">
             <h3>Выберите стиль питания</h3>
             <div class="tabheader__items">
@@ -140,17 +140,19 @@
             </div>
           </div>
           <div class="offer__slider-wrapper">
-            <div class="offer__slide">
-              <img src="img/slider/pepper.jpg" alt="pepper" />
-            </div>
-            <div class="offer__slide">
-              <img src="img/slider/food-12.jpg" alt="food" />
-            </div>
-            <div class="offer__slide">
-              <img src="img/slider/olive-oil.jpg" alt="oil" />
-            </div>
-            <div class="offer__slide">
-              <img src="img/slider/paprika.jpg" alt="paprika" />
+            <div class="offer__slider-inner">
+              <div class="offer__slide">
+                <img src="img/slider/pepper.jpg" alt="pepper" />
+              </div>
+              <div class="offer__slide">
+                <img src="img/slider/food-12.jpg" alt="food" />
+              </div>
+              <div class="offer__slide">
+                <img src="img/slider/olive-oil.jpg" alt="oil" />
+              </div>
+              <div class="offer__slide">
+                <img src="img/slider/paprika.jpg" alt="paprika" />
+              </div>
             </div>
           </div>
         </div>
@@ -234,9 +236,7 @@
       <h2 class="title">Наше меню на день</h2>
 
       <div class="menu__field">
-        <div class="container">
-          
-        </div>
+        <div class="container"></div>
       </div>
     </div>
 
