--- a/index.html
+++ b/index.html
@@ -346,6 +346,6 @@
       </div>
     </div>
 
-    <script src="./js/script.js"></script>
+    <script src="./js/bundle.js"></script>
   </body>
 </html>
