--- a/index.html
+++ b/index.html
@@ -142,16 +142,16 @@
           <div class="offer__slider-wrapper">
             <div class="offer__slider-inner">
               <div class="offer__slide">
-                <img src="img/slider/pepper.jpg" alt="pepper" />
+                <img src="img/slider/pepper.webp" alt="pepper" />
               </div>
               <div class="offer__slide">
-                <img src="img/slider/food-12.jpg" alt="food" />
+                <img src="img/slider/food-12.webp" alt="food" />
               </div>
               <div class="offer__slide">
-                <img src="img/slider/olive-oil.jpg" alt="oil" />
+                <img src="img/slider/olive-oil.webp" alt="oil" />
               </div>
               <div class="offer__slide">
-                <img src="img/slider/paprika.jpg" alt="paprika" />
+                <img src="img/slider/paprika.webp" alt="paprika" />
               </div>
             </div>
           </div>
