--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <div class="tabcontainer">
           <!--Tab #1-->
           <div class="tabcontent">
-            <img src="img/tabs/vegy.jpg" alt="vegy" />
+            <img src="img/tabs/vegy.webp" alt="vegy" />
             <div class="tabcontent__descr">
               Меню "Фитнес" - это новый подход к приготовлению блюд: больше
               свежих овощей и фруктов. Для людей, которые интересуются спортом;
@@ -53,7 +53,7 @@
           </div>
           <!--Tab #2-->
           <div class="tabcontent">
-            <img src="img/tabs/elite.jpg" alt="elite" />
+            <img src="img/tabs/elite.webp" alt="elite" />
             <div class="tabcontent__descr">
               Меню “Премиум” - мы используем не только красивый дизайн упаковки,
               но и качественное исполнение блюд. Красная рыба, морепродукты,
@@ -62,7 +62,7 @@
           </div>
           <!--Tab #3-->
           <div class="tabcontent">
-            <img src="img/tabs/post.jpg" alt="post" />
+            <img src="img/tabs/post.webp" alt="post" />
             <div class="tabcontent__descr">
               Наше специальное “Постное меню” - это тщательный подбор
               ингредиентов: полное отсутствие продуктов животного происхождения.
@@ -72,7 +72,7 @@
           </div>
           <!--Tab #4-->
           <div class="tabcontent">
-            <img src="img/tabs/vegy.jpg" alt="vegy" />
+            <img src="img/tabs/vegy.webp" alt="vegy" />
             <div class="tabcontent__descr">
               Меню "Сбалансированное" - это соответствие вашего рациона всем
               научным рекомендациям. Мы тщательно просчитываем вашу потребность
